--- a/FFT_visualization.ipynb
+++ b/FFT_visualization.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "amp_offset = 1 # to avoid negative y-values\n",
     "\n",
-    "freq =11 \n",
+    "freq = 3\n",
     "\n",
     "df = pd.DataFrame({'t' : t,\n",
     "                  'amp' : amp_offset + np.sin(freq*t*2*np.pi)})\n",
@@ -98,11 +98,11 @@
    "source": [
     "# wrap data on circle with frequency Hz\n",
     "\n",
-    "def plot_g(df,Hz):\n",
+    "def plot_g(df,Hz,ax):\n",
     "    cartesian = pd.DataFrame(pol2cart(df['amp'],df['t'] * Hz * 2 * np.pi)).T\n",
     "    cartesian.columns = ['y','x']\n",
-    "    plt.plot(cartesian['x'],cartesian['y'],'o--')\n",
-    "    plt.plot(cartesian['x'].mean(),0,'o',color='orange')\n",
+    "    ax.plot(cartesian['x'],cartesian['y'],'o--')\n",
+    "    ax.plot(cartesian['x'].mean(),0,'o',color='orange')\n",
     "    "
    ]
   },
@@ -112,7 +112,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_g(df,11)"
+    "ax = plt.gca()\n",
+    "plot_g(df,3,ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig,axes = plt.subplots(2,3,figsize=(18,12))\n",
+    "\n",
+    "plot_g(df,1,axes[0,0])\n",
+    "plot_g(df,2,axes[0,1])\n",
+    "plot_g(df,3,axes[0,2])\n",
+    "plot_g(df,4,axes[1,0])\n",
+    "plot_g(df,5,axes[1,1])\n",
+    "plot_g(df,6,axes[1,2])"
    ]
   }
  ],
