--- a/FFT_visualization.ipynb
+++ b/FFT_visualization.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "amp_offset = 1 # to avoid negative y-values\n",
     "\n",
-    "freq = 3\n",
+    "freq = 3 #frequency of the signal we want to identify\n",
     "\n",
     "df = pd.DataFrame({'t' : t,\n",
     "                  'amp' : amp_offset + np.sin(freq*t*2*np.pi)})\n",
@@ -58,7 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.plot(x='t',y='amp')"
+    "df.plot(x='t',y='amp')\n",
+    "plt.ylabel('amplitude')\n",
+    "plt.xlabel('time')"
    ]
   },
   {
@@ -67,9 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# polar plot with the same wrapping freq. as the signal\n",
+    "\n",
     "plt.figure(figsize=(18,12))\n",
     "plt.polar(df['t'] * freq * 2 * np.pi,df['amp'])\n",
-    "#plt.polar(df['t'] *  2 * np.pi,df['amp'],'o--')\n",
     "\n",
     "ax = plt.gca()\n",
     "\n",
@@ -85,22 +88,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cartesian = pd.DataFrame(pol2cart(df['amp'],df['t'] * 2 * np.pi)).T\n",
-    "cartesian.columns = ['y','x']\n",
-    "cartesian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# wrap data on circle with frequency Hz\n",
+    "# wrap data on circles with frequency Hz\n",
     "\n",
-    "def plot_g(df,Hz,ax):\n",
+    "def plot_g(df,Hz,freq,ax):\n",
+    "    title = 'True Signal Frequency: {} Wrapping Frequency; {}'.format(freq,Hz)\n",
+    "    \n",
     "    cartesian = pd.DataFrame(pol2cart(df['amp'],df['t'] * Hz * 2 * np.pi)).T\n",
     "    cartesian.columns = ['y','x']\n",
+    "    ax.set_title(title)\n",
     "    ax.plot(cartesian['x'],cartesian['y'],'o--')\n",
     "    ax.plot(cartesian['x'].mean(),0,'o',color='orange')\n",
     "    "
@@ -112,8 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# same wrapping frequency as the signal\n",
     "ax = plt.gca()\n",
-    "plot_g(df,3,ax)"
+    "plot_g(df,3,freq,ax)"
    ]
   },
   {
@@ -122,15 +118,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plots with different wrapping frequencies. Note that all wrap.freq's but the correct one\n",
+    "# have their centre of mass (the orange dot) at origo. \n",
     "\n",
     "fig,axes = plt.subplots(2,3,figsize=(18,12))\n",
     "\n",
-    "plot_g(df,1,axes[0,0])\n",
-    "plot_g(df,2,axes[0,1])\n",
-    "plot_g(df,3,axes[0,2])\n",
-    "plot_g(df,4,axes[1,0])\n",
-    "plot_g(df,5,axes[1,1])\n",
-    "plot_g(df,6,axes[1,2])"
+    "plot_g(df,1,freq,axes[0,0])\n",
+    "plot_g(df,2,freq,axes[0,1])\n",
+    "plot_g(df,3,freq,axes[0,2])\n",
+    "plot_g(df,4,freq,axes[1,0])\n",
+    "plot_g(df,5,freq,axes[1,1])\n",
+    "plot_g(df,6,freq,axes[1,2])"
    ]
   }
  ],
